update content in coerction.html

--- a/html/coercion.html
+++ b/html/coercion.html
@@ -78,7 +78,7 @@
 
           <ol>
             <li>Numbers are returned as-is
-            <li>undefined turns into NaN
+            <li><strong>undefined turns into NaN</strong>
             <li>null turns into 0
             <li>true turns into 1
             <li>false turns into 0
