update content and formatting in number.html

--- a/html/number.html
+++ b/html/number.html
@@ -114,7 +114,6 @@
                     </ol>
                 </article>
 
-
                 <article>
                     <h1 class="count">Code Example</h1>
                     <details open><!--details CODE-->
@@ -138,7 +137,6 @@ Number([]) </pre><!-- code-content -->
 
                 </article>
 
-
                 <article>
                     <h1 class="count">Code Example</h1>
                     <details open><!--details CODE-->
@@ -161,7 +159,6 @@ Number([]) </pre><!-- code-content -->
                     </details><!--details CONSOLE -->
 
                 </article>
-
 
                 <article>
                     <h1 class="count">Code Example</h1>
@@ -232,7 +229,6 @@ NaN </pre><!-- wide-view -->
 
                 </article>
 
-
                 <article>
                     <h1 class="count">Code Example</h1>
                     <details open><!--details CODE-->
@@ -284,8 +280,7 @@ NaN </pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
- Number(undefined)
-  </pre><!-- code-content -->
+ Number(undefined) </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -302,7 +297,6 @@ NaN</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
-
 
                 <article>
                     <h1 class="count">Code Example</h1>
@@ -435,8 +429,7 @@ Number.isNaN(Number(undefined)) </pre><!-- code-content -->
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-true
-</pre><!-- small-view -->
+true </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
 true </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
@@ -495,8 +488,7 @@ Number("0b11")</pre><!-- code-content -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-Number("0o11")
-  </pre><!-- code-content -->
+Number("0o11") </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -576,14 +568,6 @@ console.log([
 [ 37.2, 37.2, "number", false]
 [ "37.2", 37.2, "string", false] </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
-                </article>
-                <article>
-                    <h1 class="count">Notes</h1>
-
-                    <ol>
-                        <li>I am an item</li>
-                    </ol>
-
                 </article>
 
                 <article>
